# lib-annotator

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
annotator/pkg/processor/: __init__.py
annotator/pkg/utils/: function_utils.py
src/annotator/: annotator.py
src/conf/: versionControl.yaml
src/pkg/: info.py  logger.py
src/pkg/processor/: protocol.py  varnote.py
