[project]
name = "annotator"
description = "python library for annotation by resources"
version = "0.1.0"
authors = [
    { name = "Yu-Bin Wang", email = "yubin0611@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "PyYAML>=6.0",
]

[options]
include_package_data = True

[build-system]
requires = []
